[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/script_fases/fase_1_script.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player/player_fase1/side_scroller_F1/player_plataforma.tscn" type="PackedScene" id=3]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/homen_das_cavernas(s_d).tscn" type="PackedScene" id=4]
[ext_resource path="res://assets_game/background/fase_1/cena_1/background_fase_1_cena_1.jpg" type="Texture" id=5]
[ext_resource path="res://assets_game/background/fase_1/cena_1/Background_arvores_cena1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 244, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.6094, 40.1346 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.1873, 492.385 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 59.3942, 170.25 )

[node name="world" type="Node"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 45, 7 )
scale = Vector2( 3.16, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 208, -19 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="StaticBody2D/CollisionShape2D"]
modulate = Color( 0.0862745, 0.0117647, 0.0117647, 1 )
position = Vector2( 0.499987, 0.365387 )
scale = Vector2( 7.57812, 0.28125 )
texture = ExtResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( -32.9999, 0.750015 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 317.25, -60.75 )
shape = SubResource( 2 )

[node name="icon" type="Sprite" parent="StaticBody2D2/CollisionShape2D"]
modulate = Color( 0.0666667, 0.00784314, 0.00784314, 1 )
position = Vector2( 5.23447, -1.88464 )
scale = Vector2( 1.38672, 1.28125 )
texture = ExtResource( 2 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2( 178.5, -186 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( 317.25, -60.75 )
shape = SubResource( 2 )

[node name="icon" type="Sprite" parent="StaticBody2D6/CollisionShape2D"]
modulate = Color( 0.0666667, 0.00784314, 0.00784314, 1 )
position = Vector2( 5.23447, -1.88464 )
scale = Vector2( 1.38672, 1.28125 )
texture = ExtResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 66, -90.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 317.25, -60.75 )
shape = SubResource( 2 )

[node name="icon" type="Sprite" parent="StaticBody2D4/CollisionShape2D"]
modulate = Color( 0.0666667, 0.00784314, 0.00784314, 1 )
position = Vector2( 5.23447, -1.88464 )
scale = Vector2( 1.38672, 1.28125 )
texture = ExtResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 33.75, -67.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -74.25, -405 )
shape = SubResource( 3 )

[node name="icon" type="Sprite" parent="StaticBody2D3/CollisionShape2D"]
modulate = Color( 0.0666667, 0.00392157, 0.00392157, 1 )
position = Vector2( -3.02362, 3.00003 )
scale = Vector2( 0.648438, 14.7813 )
texture = ExtResource( 2 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1180.5, 481.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( -74.25, -405 )
shape = SubResource( 3 )

[node name="icon" type="Sprite" parent="StaticBody2D5/CollisionShape2D"]
modulate = Color( 0.0666667, 0.00392157, 0.00392157, 1 )
position = Vector2( -3.02362, 3.00003 )
scale = Vector2( 0.648438, 14.7813 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 208.5, 4.49999 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 812.25, -191.25 )
shape = SubResource( 4 )

[node name="player_plataforma" parent="." instance=ExtResource( 3 )]
position = Vector2( 243, -96.75 )
scale = Vector2( 1.92, 1.76 )

[node name="Camera2D" type="Camera2D" parent="player_plataforma"]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = 0
limit_top = -620
limit_right = 1230
limit_bottom = 0

[node name="Label" type="Label" parent="."]
margin_left = 576.5
margin_top = -256.5
margin_right = 830.5
margin_bottom = -223.5
custom_colors/font_color = Color( 0.501961, 0.0196078, 0.0196078, 1 )
text = "voce deverira olhar em outra perpsctiva
 press enter "

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 414, -81 )

[node name="homen_das_cavernas(s_d)" parent="." instance=ExtResource( 4 )]
position = Vector2( 943.5, -80.5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="layer_montanhas" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -1, 70 )
motion_scale = Vector2( 1, 0.5 )
motion_offset = Vector2( 1, 0 )

[node name="background_fase_1_cena_1" type="Sprite" parent="ParallaxBackground/layer_montanhas"]
position = Vector2( -39.8872, -589.144 )
scale = Vector2( 1.5, 1.1 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 1, 1 )

[node name="layer_arvore" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.8 )

[node name="Background_arvores_cena2" type="Sprite" parent="ParallaxBackground/layer_arvore"]
position = Vector2( -67.7417, -80.555 )
scale = Vector2( 1.30458, 0.952066 )
texture = ExtResource( 6 )

[node name="Background_arvores_cena1" type="Sprite" parent="ParallaxBackground/layer_arvore"]
position = Vector2( 902.758, -89.555 )
scale = Vector2( 1.30458, 0.952066 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
