[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/script_fases/fase_1_script.gd" type="Script" id=1]
[ext_resource path="res://assets_game/background/fase_1/cena_2/layer_topodaarvore.png" type="Texture" id=2]
[ext_resource path="res://assets_game/background/fase_1/cena_2/layer_arvores_top_down.png" type="Texture" id=3]
[ext_resource path="res://assets_game/background/fase_1/cena_2/background_topdow1 ajustado.png" type="Texture" id=4]
[ext_resource path="res://player/player_fase1/top_down_F1/player_top_down.tscn" type="PackedScene" id=5]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/homen_das_cavernas(T_D).tscn" type="PackedScene" id=6]
[ext_resource path="res://assets_game/background/fase_1/cena_2/river_motion_animation/river_motion_animation0000.png" type="Texture" id=7]
[ext_resource path="res://assets_game/background/fase_1/cena_2/river_motion_animation/river_motion_animation0001.png" type="Texture" id=8]
[ext_resource path="res://assets_game/background/fase_1/cena_2/river_motion_animation/river_motion_animation0002.png" type="Texture" id=9]
[ext_resource path="res://assets_game/background/fase_1/cena_2/river_motion_animation/river_motion_animation0003.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 447.926, 11.1625 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39, 377.756 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "river_motion",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 522.355, 52.8584 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.0371, 79.7635 )

[node name="world2 " type="Node"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 84.535, 185.088 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 10.5, -604.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="Pedra" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -106.412, -206.976 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Pedra"]
scale = Vector2( 1.76, 1 )
polygon = PoolVector2Array( 13.1833, 27.9582, 26.3027, 105.156, 57.4439, 130.268, 86.1327, 123.489, 120.199, 99.5584, 167.163, 61.9282, 180.537, 30.988, 176.569, 0.397217, 209.248, -44.1261, 224.892, -76.3521, 228.424, -100.173, 210.533, -134.996, 178.079, -128.949, 142.268, -64.5789, 107.371, -27.3938, 78.2156, -5.36417, 43.1851, -9.97911, 28.6441, -37.4441, 5.28259, -39.194, -7.24892, -23.4979 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -415.379, -216.75 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 825.277, -214.755 )
rotation = 1.56051
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
scale = Vector2( 1.76, 1 )
shape = SubResource( 1 )

[node name="area_iniciocena2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 103.749, -8.10541 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_iniciocena2"]
position = Vector2( -148.5, -246.375 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -175.0
margin_top = -181.667
margin_right = 43.0
margin_bottom = -114.667
custom_colors/font_color = Color( 0.756863, 0.054902, 0.054902, 1 )
text = "mude a perspectiva que vc olha"

[node name="Paralax_main_arvore" type="ParallaxBackground" parent="."]
editor/display_folded = true
layer = 0

[node name="Layerarvoretopo" type="ParallaxLayer" parent="Paralax_main_arvore"]
editor/display_folded = true
z_index = 16
z_as_relative = false
motion_scale = Vector2( 0.9, 0.9 )

[node name="layer_topodaarvore" type="Sprite" parent="Paralax_main_arvore/Layerarvoretopo"]
position = Vector2( 587.477, 18.8907 )
z_index = 5
texture = ExtResource( 2 )

[node name="layer_arvores_top_down" type="Sprite" parent="Paralax_main_arvore/Layerarvoretopo"]
position = Vector2( 193.904, -444.868 )
scale = Vector2( 1.04875, 1.21862 )
texture = ExtResource( 3 )

[node name="paralax_main_chão" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="paralax_main_chão"]
z_as_relative = false

[node name="background_topdow1" type="Sprite" parent="paralax_main_chão/ParallaxLayer"]
position = Vector2( 188.315, -204.635 )
scale = Vector2( 1.00222, 1 )
texture = ExtResource( 4 )

[node name="player_top_down" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 487.853, 41.656 )
scale = Vector2( 0.440059, 0.480055 )
z_as_relative = false

[node name="Camera2D" type="Camera2D" parent="player_top_down"]
position = Vector2( 20.9855, 60.8932 )
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -400
limit_top = -600
limit_right = 775
limit_bottom = 170

[node name="homen_das_cavernas(T_D)" parent="." instance=ExtResource( 6 )]
position = Vector2( 6.05902, -48.8018 )

[node name="colisaõ_arvore" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="colisaõ_arvore"]
position = Vector2( 323.32, 99.0009 )
scale = Vector2( 1.01314, 0.826789 )
polygon = PoolVector2Array( 287.41, -0.0795898, 355.241, 52.6773, 382.81, 56.224, 402.143, 57.5573, 428.81, 54.8907, 466.143, 44.224, 482.143, 12.8907, 480.81, -37.776, 468.81, -88.4427, 436.81, -121.109, 400.143, -134.443, 367.477, -141.776, 346.143, -145.109, 325.477, -140.443, 308.81, -134.443, 284.81, -121.776, 268.143, -69.776, 274.143, -40.4427, 277.477, -15.1093 )

[node name="animation_river" type="AnimatedSprite" parent="."]
position = Vector2( 189, -303.75 )
frames = SubResource( 3 )
animation = "river_motion"
frame = 1
playing = true

[node name="Area2D2_Rio" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 291.677, -350.118 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2_Rio"]
position = Vector2( -5.71808, -3.54681 )
shape = SubResource( 4 )

[node name="area_mudar_cena3" type="Area2D" parent="."]
position = Vector2( 811.5, -133.5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_mudar_cena3"]
shape = SubResource( 5 )

[node name="position_fimcena3" type="Position2D" parent="."]
position = Vector2( 741, -111 )

[node name="position_arvore" type="Position2D" parent="."]
position = Vector2( 478.5, 57 )
[connection signal="body_entered" from="area_iniciocena2" to="." method="_on_area_iniciocena2_body_entered"]
[connection signal="body_exited" from="area_iniciocena2" to="." method="_on_area_iniciocena2_body_exited"]
[connection signal="body_entered" from="area_mudar_cena3" to="." method="_on_area_mudar_cena3_body_entered"]
